--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ install:
     - cabal-meta install --force-reinstalls
 
 script: mega-sdist --test
+
+after_failure: cabal list --installed --simple-output
