--- a/wai-extra/wai-extra.cabal
+++ b/wai-extra/wai-extra.cabal
@@ -134,6 +134,7 @@ Library
                      Network.Wai.Middleware.HttpAuth
                      Network.Wai.Middleware.StreamFile
                      Network.Wai.Middleware.ForceSSL
+                     Network.Wai.Middleware.Routed
                      Network.Wai.Parse
                      Network.Wai.Request
                      Network.Wai.UrlMap
